--- a/Cbsm/.vscode/launch.json
+++ b/Cbsm/.vscode/launch.json
@@ -5,12 +5,36 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File (Integrated Terminal)",
+            "name": "SST",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args":["sst"]
-        }
+            "args":["SST"]
+        },
+        {
+            "name": "YARD",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args":["YARD"]
+        },
+        {
+            "name": "YARD-C",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args":["YARD-C"]
+        },
+        {
+            "name": "IT-TENKO",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args":["IT-TENKO"]
+        },
     ]
 }
